packages/unisynth/src/optimizer/core/src/snapshots/unisynth_core__test__example_strip_exports_used.snap
---
source: packages/unisynth/src/optimizer/core/src/test.rs
assertion_line: 1682
expression: output
---
==INPUT==


import { component$, useResource$ } from '@khulnasoft.com/unisynth';
import mongodb from 'mongodb';

export const onGet = () => {
    const data = mongodb.collection.whatever;
    return {
        body: {
        data
        }
    }
};

export default component$(()=> {
    useResource$(() => {
        return onGet();
    })
    return <div>cmp</div>
});

============================= test.tsx_test_component_useResource_4a8wVY7wh38.tsx (ENTRY POINT)==

import { onGet } from "./test";
export const test_component_useResource_4a8wVY7wh38 = ()=>{
    return onGet();
};


Some("{\"version\":3,\"sources\":[\"/user/unisynth/src/test.tsx\"],\"names\":[],\"mappings\":\";sDAciB;IACT,OAAO;AACX\"}")
/*
{
  "origin": "test.tsx",
  "name": "test_component_useResource_4a8wVY7wh38",
  "entry": null,
  "displayName": "test.tsx_test_component_useResource",
  "hash": "4a8wVY7wh38",
  "canonicalFilename": "test.tsx_test_component_useResource_4a8wVY7wh38",
  "path": "",
  "extension": "tsx",
  "parent": "test_component_LUXeXe0DQrg",
  "ctxKind": "function",
  "ctxName": "useResource$",
  "captures": false,
  "loc": [
    282,
    319
  ]
}
*/
============================= test.tsx ==

import { componentQrl } from "@khulnasoft.com/unisynth";
import { qrl } from "@khulnasoft.com/unisynth";
export const onGet = ()=>{
    throw "Symbol removed by Unisynth Optimizer, it can not be called from current platform";
};
export default /*#__PURE__*/ componentQrl(/*#__PURE__*/ qrl(()=>import("./test.tsx_test_component_LUXeXe0DQrg"), "test_component_LUXeXe0DQrg"));


Some("{\"version\":3,\"sources\":[\"/user/unisynth/src/test.tsx\"],\"names\":[],\"mappings\":\";;aAIa;;;AASb,6BAAe,mHAKZ\"}")
============================= test.tsx_test_component_LUXeXe0DQrg.tsx (ENTRY POINT)==

import { qrl } from "@khulnasoft.com/unisynth";
import { useResourceQrl } from "@khulnasoft.com/unisynth";
export const test_component_LUXeXe0DQrg = ()=>{
    useResourceQrl(/*#__PURE__*/ qrl(()=>import("./test.tsx_test_component_useResource_4a8wVY7wh38"), "test_component_useResource_4a8wVY7wh38"));
    return <div>cmp</div>;
};


Some("{\"version\":3,\"sources\":[\"/user/unisynth/src/test.tsx\"],\"names\":[],\"mappings\":\";;0CAa0B;IACtB;IAGA,QAAQ,IAAI,GAAG,EAAE;AACrB\"}")
/*
{
  "origin": "test.tsx",
  "name": "test_component_LUXeXe0DQrg",
  "entry": null,
  "displayName": "test.tsx_test_component",
  "hash": "LUXeXe0DQrg",
  "canonicalFilename": "test.tsx_test_component_LUXeXe0DQrg",
  "path": "",
  "extension": "tsx",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    258,
    348
  ]
}
*/
== DIAGNOSTICS ==

[]
