packages/unisynth/src/optimizer/core/src/snapshots/unisynth_core__test__example_strip_server_code.snap
---
source: packages/unisynth/src/optimizer/core/src/test.rs
assertion_line: 1712
expression: output
---
==INPUT==


import { component$, serverLoader$, serverStuff$, $, client$, useStore, useTask$ } from '@khulnasoft.com/unisynth';
import { isServer } from '@khulnasoft.com/unisynth/build';
import mongo from 'mongodb';
import redis from 'redis';
import { handler } from 'serverless';

export const Parent = component$(() => {
    const state = useStore({
        text: ''
    });

    // Double count watch
    useTask$(async () => {
        if (!isServer) return;
        state.text = await mongo.users();
        redis.set(state.text);
    });

    serverStuff$(async () => {
        // should be removed too
        const a = $(() => {
            // from $(), should not be removed
        });
        const b = client$(() => {
            // from clien$(), should not be removed
        });
        return [a,b];
    })

    serverLoader$(handler);

    useTask$(() => {
        // Code
    });

    return (
        <div onClick$={() => console.log('parent')}>
            {state.text}
        </div>
    );
});

============================= test.tsx_Parent_component_useTask_gDH1EtUWqBU.js (ENTRY POINT)==

import { useLexicalScope } from "@khulnasoft.com/unisynth";
import { isServer } from "@khulnasoft.com/unisynth/build";
import mongo from "mongodb";
import redis from "redis";
export const Parent_component_useTask_gDH1EtUWqBU = async ()=>{
    const [state] = useLexicalScope();
    if (!isServer) return;
    state.text = await mongo.users();
    redis.set(state.text);
};
export { _hW } from "@khulnasoft.com/unisynth";


Some("{\"version\":3,\"sources\":[\"/user/unisynth/src/test.tsx\"],\"names\":[],\"mappings\":\";;;;oDAaa;;IACL,IAAI,CAAC,UAAU;IACf,MAAM,IAAI,GAAG,MAAM,MAAM,KAAK;IAC9B,MAAM,GAAG,CAAC,MAAM,IAAI\"}")
/*
{
  "origin": "test.tsx",
  "name": "Parent_component_useTask_gDH1EtUWqBU",
  "entry": null,
  "displayName": "test.tsx_Parent_component_useTask",
  "hash": "gDH1EtUWqBU",
  "canonicalFilename": "test.tsx_Parent_component_useTask_gDH1EtUWqBU",
  "path": "",
  "extension": "js",
  "parent": "Parent_component_0TaiDayHrlo",
  "ctxKind": "function",
  "ctxName": "useTask$",
  "captures": true,
  "loc": [
    407,
    530
  ]
}
*/
============================= test.js ==

import { componentQrl } from "@khulnasoft.com/unisynth";
import { qrl } from "@khulnasoft.com/unisynth";
export const Parent = /*#__PURE__*/ componentQrl(/*#__PURE__*/ qrl(()=>import("./test.tsx_Parent_component_0TaiDayHrlo"), "Parent_component_0TaiDayHrlo"));


Some("{\"version\":3,\"sources\":[\"/user/unisynth/src/test.tsx\"],\"names\":[],\"mappings\":\";;AAOA,OAAO,MAAM,uBAAS,uHAkCnB\"}")
============================= test.tsx_Parent_component_serverStuff_a_2ca3HLDC7yc.js (ENTRY POINT)==

export const Parent_component_serverStuff_a_2ca3HLDC7yc = ()=>{
// from $(), should not be removed
};
export { _hW } from "@khulnasoft.com/unisynth";


Some("{\"version\":3,\"sources\":[\"/user/unisynth/src/test.tsx\"],\"names\":[],\"mappings\":\"0DAqBoB;AACR,kCAAkC;AACtC\"}")
/*
{
  "origin": "test.tsx",
  "name": "Parent_component_serverStuff_a_2ca3HLDC7yc",
  "entry": null,
  "displayName": "test.tsx_Parent_component_serverStuff_a",
  "hash": "2ca3HLDC7yc",
  "canonicalFilename": "test.tsx_Parent_component_serverStuff_a_2ca3HLDC7yc",
  "path": "",
  "extension": "js",
  "parent": "Parent_component_serverStuff_r1qAHX7Opp0",
  "ctxKind": "function",
  "ctxName": "$",
  "captures": false,
  "loc": [
    618,
    682
  ]
}
*/
============================= test.tsx_Parent_component_serverStuff_b_client_v9qawr2Inkk.js (ENTRY POINT)==

export const Parent_component_serverStuff_b_client_v9qawr2Inkk = ()=>{
// from clien$(), should not be removed
};


Some("{\"version\":3,\"sources\":[\"/user/unisynth/src/test.tsx\"],\"names\":[],\"mappings\":\"iEAwB0B;AACd,uCAAuC;AAC3C\"}")
/*
{
  "origin": "test.tsx",
  "name": "Parent_component_serverStuff_b_client_v9qawr2Inkk",
  "entry": null,
  "displayName": "test.tsx_Parent_component_serverStuff_b_client",
  "hash": "v9qawr2Inkk",
  "canonicalFilename": "test.tsx_Parent_component_serverStuff_b_client_v9qawr2Inkk",
  "path": "",
  "extension": "js",
  "parent": "Parent_component_serverStuff_r1qAHX7Opp0",
  "ctxKind": "function",
  "ctxName": "client$",
  "captures": false,
  "loc": [
    711,
    780
  ]
}
*/
============================= test.tsx_Parent_component_0TaiDayHrlo.js (ENTRY POINT)==

import { _fnSignal } from "@khulnasoft.com/unisynth";
import { _jsxQ } from "@khulnasoft.com/unisynth";
import { _noopQrl } from "@khulnasoft.com/unisynth";
import { qrl } from "@khulnasoft.com/unisynth";
import { serverLoaderQrl } from "@khulnasoft.com/unisynth";
import { serverStuffQrl } from "@khulnasoft.com/unisynth";
import { useStore } from "@khulnasoft.com/unisynth";
import { useTaskQrl } from "@khulnasoft.com/unisynth";
export const Parent_component_0TaiDayHrlo = ()=>{
    const state = useStore({
        text: ''
    });
    // Double count watch
    useTaskQrl(/*#__PURE__*/ qrl(()=>import("./test.tsx_Parent_component_useTask_gDH1EtUWqBU"), "Parent_component_useTask_gDH1EtUWqBU", [
        state
    ]));
    serverStuffQrl(/*#__PURE__*/ _noopQrl("Parent_component_serverStuff_r1qAHX7Opp0"));
    serverLoaderQrl(/*#__PURE__*/ _noopQrl("Parent_component_serverLoader_k1L0DiPQV1I"));
    useTaskQrl(/*#__PURE__*/ qrl(()=>import("./test.tsx_Parent_component_useTask_1_P8oRQhHsurk"), "Parent_component_useTask_1_P8oRQhHsurk"));
    return /*#__PURE__*/ _jsxQ("div", null, {
        onClick$: /*#__PURE__*/ qrl(()=>import("./test.tsx_Parent_component_div_onClick_C5XE49Nqd3A"), "Parent_component_div_onClick_C5XE49Nqd3A")
    }, _fnSignal((p0)=>p0.text, [
        state
    ], "p0.text"), 3, "u6_0");
};


Some("{\"version\":3,\"sources\":[\"/user/unisynth/src/test.tsx\"],\"names\":[],\"mappings\":\";;;;;;;;4CAOiC;IAC7B,MAAM,QAAQ,SAAS;QACnB,MAAM;IACV;IAEA,qBAAqB;IACrB;;;IAMA;IAWA;IAEA;IAIA,qBACI,MAAC;QAAI,QAAQ;uBACR,GAAM,IAAI;;;AAGvB\"}")
/*
{
  "origin": "test.tsx",
  "name": "Parent_component_0TaiDayHrlo",
  "entry": null,
  "displayName": "test.tsx_Parent_component",
  "hash": "0TaiDayHrlo",
  "canonicalFilename": "test.tsx_Parent_component_0TaiDayHrlo",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    305,
    1002
  ]
}
*/
============================= test.tsx_Parent_component_div_onClick_C5XE49Nqd3A.js (ENTRY POINT)==

export const Parent_component_div_onClick_C5XE49Nqd3A = ()=>console.log('parent');


Some("{\"version\":3,\"sources\":[\"/user/unisynth/src/test.tsx\"],\"names\":[],\"mappings\":\"wDAqCuB,IAAM,QAAQ,GAAG,CAAC\"}")
/*
{
  "origin": "test.tsx",
  "name": "Parent_component_div_onClick_C5XE49Nqd3A",
  "entry": null,
  "displayName": "test.tsx_Parent_component_div_onClick",
  "hash": "C5XE49Nqd3A",
  "canonicalFilename": "test.tsx_Parent_component_div_onClick_C5XE49Nqd3A",
  "path": "",
  "extension": "js",
  "parent": "Parent_component_0TaiDayHrlo",
  "ctxKind": "eventHandler",
  "ctxName": "onClick$",
  "captures": false,
  "loc": [
    924,
    951
  ]
}
*/
============================= test.tsx_Parent_component_useTask_1_P8oRQhHsurk.js (ENTRY POINT)==

export const Parent_component_useTask_1_P8oRQhHsurk = ()=>{
// Code
};
export { _hW } from "@khulnasoft.com/unisynth";


Some("{\"version\":3,\"sources\":[\"/user/unisynth/src/test.tsx\"],\"names\":[],\"mappings\":\"sDAgCa;AACL,OAAO;AACX\"}")
/*
{
  "origin": "test.tsx",
  "name": "Parent_component_useTask_1_P8oRQhHsurk",
  "entry": null,
  "displayName": "test.tsx_Parent_component_useTask_1",
  "hash": "P8oRQhHsurk",
  "canonicalFilename": "test.tsx_Parent_component_useTask_1_P8oRQhHsurk",
  "path": "",
  "extension": "js",
  "parent": "Parent_component_0TaiDayHrlo",
  "ctxKind": "function",
  "ctxName": "useTask$",
  "captures": false,
  "loc": [
    855,
    884
  ]
}
*/
== DIAGNOSTICS ==

[]
