packages/unisynth/src/optimizer/core/src/snapshots/unisynth_core__test__example_transpile_ts_only.snap
---
source: packages/unisynth/src/optimizer/core/src/test.rs
assertion_line: 2513
expression: output
---
==INPUT==


import { component$, useStore } from '@khulnasoft.com/unisynth';

export const App = component$((props: Stuff) => {
    return (
        <Cmp>
            <p class="stuff" onClick$={() => console.log('warn')}>Hello Unisynth</p>
        </Cmp>
    );
});

============================= test.jsx ==

import { componentQrl } from "@khulnasoft.com/unisynth";
import { inlinedQrl } from "@khulnasoft.com/unisynth";
export const App = /*#__PURE__*/ componentQrl(/*#__PURE__*/ inlinedQrl((props)=>{
    return <Cmp>
            <p class="stuff" onClick$={/*#__PURE__*/ inlinedQrl(()=>console.log('warn'), "App_component_Cmp_p_onClick_vuXzfUTkpto")}>Hello Unisynth</p>
        </Cmp>;
}, "App_component_ckEPmXZlub0"));


Some("{\"version\":3,\"sources\":[\"/user/unisynth/src/test.tsx\"],\"names\":[],\"mappings\":\";;AAGA,OAAO,MAAM,oBAAM,sCAAW,CAAC;IAC3B,QACK,IAAI;YACD,CAAC,EAAE,MAAM,QAAQ,mCAAU,IAAM,QAAQ,GAAG,CAAC,qDAAS,UAAU,EAAE,EAAE;QACxE,EAAE;AAEV,iCAAG\"}")
== DIAGNOSTICS ==

[]
