packages/unisynth/src/optimizer/core/src/snapshots/unisynth_core__test__example_unisynth_conflict.snap
---
source: packages/unisynth/src/optimizer/core/src/test.rs
assertion_line: 1126
expression: output
---
==INPUT==


import { $, component$, useStyles } from '@khulnasoft.com/unisynth';
import { qrl } from '@khulnasoft.com/unisynth/what';

export const hW = 12;
export const handleWatch = 42;

const componentQrl = () => console.log('not this', qrl());

componentQrl();
export const Foo = component$(() => {
    useStyles$('thing');
    const unisynth = hW + handleWatch;
    console.log(unisynth);
    const qrl = 23;
    return (
        <div onClick$={()=> console.log(qrl)}/>
    )
}, {
    tagName: "my-foo",
});

export const Root = component$(() => {
    useStyles($('thing'));
    return $(() => {
        return (
            <div/>
        )
    });
}, {
    tagName: "my-foo",
});

============================= test.js ==

import { componentQrl } from "@khulnasoft.com/unisynth";
import { qrl } from "@khulnasoft.com/unisynth";
import { qrl as qrl1 } from '@khulnasoft.com/unisynth/what';
export const hW = 12;
export const handleWatch = 42;
const componentQrl1 = ()=>console.log('not this', qrl1());
componentQrl1();
export const Foo = /*#__PURE__*/ componentQrl(/*#__PURE__*/ qrl(()=>import("./test.tsx_Foo_component_HTDRsvUbLiE"), "Foo_component_HTDRsvUbLiE"), {
    tagName: "my-foo"
});
export const Root = /*#__PURE__*/ componentQrl(/*#__PURE__*/ qrl(()=>import("./test.tsx_Root_component_royhjYaCbYE"), "Root_component_royhjYaCbYE"), {
    tagName: "my-foo"
});


Some("{\"version\":3,\"sources\":[\"/user/unisynth/src/test.tsx\"],\"names\":[],\"mappings\":\";;AAEA,SAAS,OAAA,IAAG,QAAQ,wBAAwB;AAE5C,OAAO,MAAM,KAAK,GAAG;AACrB,OAAO,MAAM,cAAc,GAAG;AAE9B,MAAM,gBAAe,IAAM,QAAQ,GAAG,CAAC,YAAY;AAEnD;AACA,OAAO,MAAM,oBAAM,iHAQhB;IACC,SAAS;AACb,GAAG;AAEH,OAAO,MAAM,qBAAO,mHAOjB;IACC,SAAS;AACb,GAAG\"}")
============================= test.tsx_Foo_component_HTDRsvUbLiE.js (ENTRY POINT)==

import { _jsxQ } from "@khulnasoft.com/unisynth";
import { hW } from "./test";
import { handleWatch } from "./test";
import { qrl } from "@khulnasoft.com/unisynth";
export const Foo_component_HTDRsvUbLiE = ()=>{
    useStyles$('thing');
    const unisynth = hW + handleWatch;
    console.log(unisynth);
    return /*#__PURE__*/ _jsxQ("div", null, {
        onClick$: /*#__PURE__*/ qrl(()=>import("./test.tsx_Foo_component_div_onClick_M48DYiidSJw"), "Foo_component_div_onClick_M48DYiidSJw")
    }, null, 3, "u6_0");
};


Some("{\"version\":3,\"sources\":[\"/user/unisynth/src/test.tsx\"],\"names\":[],\"mappings\":\";;;;yCAU8B;IAC1B,WAAW;IACX,MAAM,OAAO,KAAK;IAClB,QAAQ,GAAG,CAAC;IAEZ,qBACI,MAAC;QAAI,QAAQ;;AAErB\"}")
/*
{
  "origin": "test.tsx",
  "name": "Foo_component_HTDRsvUbLiE",
  "entry": null,
  "displayName": "test.tsx_Foo_component",
  "hash": "HTDRsvUbLiE",
  "canonicalFilename": "test.tsx_Foo_component_HTDRsvUbLiE",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    269,
    448
  ]
}
*/
============================= test.tsx_Root_component_useStyles_u5DkUxGrGnU.js (ENTRY POINT)==

export const Root_component_useStyles_u5DkUxGrGnU = 'thing';
export { _hW } from "@khulnasoft.com/unisynth";


Some("{\"version\":3,\"sources\":[\"/user/unisynth/src/test.tsx\"],\"names\":[],\"mappings\":\"oDAuBgB\"}")
/*
{
  "origin": "test.tsx",
  "name": "Root_component_useStyles_u5DkUxGrGnU",
  "entry": null,
  "displayName": "test.tsx_Root_component_useStyles",
  "hash": "u5DkUxGrGnU",
  "canonicalFilename": "test.tsx_Root_component_useStyles_u5DkUxGrGnU",
  "path": "",
  "extension": "js",
  "parent": "Root_component_royhjYaCbYE",
  "ctxKind": "function",
  "ctxName": "$",
  "captures": false,
  "loc": [
    535,
    542
  ]
}
*/
============================= test.tsx_Root_component_royhjYaCbYE.js (ENTRY POINT)==

import { qrl } from "@khulnasoft.com/unisynth";
import { useStyles } from "@khulnasoft.com/unisynth";
export const Root_component_royhjYaCbYE = ()=>{
    useStyles(/*#__PURE__*/ qrl(()=>import("./test.tsx_Root_component_useStyles_u5DkUxGrGnU"), "Root_component_useStyles_u5DkUxGrGnU"));
    return /*#__PURE__*/ qrl(()=>import("./test.tsx_Root_component_1_cBpQNYDUHI4"), "Root_component_1_cBpQNYDUHI4");
};


Some("{\"version\":3,\"sources\":[\"/user/unisynth/src/test.tsx\"],\"names\":[],\"mappings\":\";;0CAsB+B;IAC3B;IACA;AAKJ\"}")
/*
{
  "origin": "test.tsx",
  "name": "Root_component_royhjYaCbYE",
  "entry": null,
  "displayName": "test.tsx_Root_component",
  "hash": "royhjYaCbYE",
  "canonicalFilename": "test.tsx_Root_component_royhjYaCbYE",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    511,
    622
  ]
}
*/
============================= test.tsx_Root_component_1_cBpQNYDUHI4.js (ENTRY POINT)==

import { _jsxQ } from "@khulnasoft.com/unisynth";
export const Root_component_1_cBpQNYDUHI4 = ()=>{
    return /*#__PURE__*/ _jsxQ("div", null, null, null, 3, "u6_1");
};
export { _hW } from "@khulnasoft.com/unisynth";


Some("{\"version\":3,\"sources\":[\"/user/unisynth/src/test.tsx\"],\"names\":[],\"mappings\":\";4CAwBa;IACL,qBACI,MAAC;AAET\"}")
/*
{
  "origin": "test.tsx",
  "name": "Root_component_1_cBpQNYDUHI4",
  "entry": null,
  "displayName": "test.tsx_Root_component_1",
  "hash": "cBpQNYDUHI4",
  "canonicalFilename": "test.tsx_Root_component_1_cBpQNYDUHI4",
  "path": "",
  "extension": "js",
  "parent": "Root_component_royhjYaCbYE",
  "ctxKind": "function",
  "ctxName": "$",
  "captures": false,
  "loc": [
    559,
    618
  ]
}
*/
============================= test.tsx_Foo_component_div_onClick_M48DYiidSJw.js (ENTRY POINT)==

export const Foo_component_div_onClick_M48DYiidSJw = ()=>console.log(23);


Some("{\"version\":3,\"sources\":[\"/user/unisynth/src/test.tsx\"],\"names\":[],\"mappings\":\"qDAgBuB,IAAK,QAAQ,GAAG,CAFvB\"}")
/*
{
  "origin": "test.tsx",
  "name": "Foo_component_div_onClick_M48DYiidSJw",
  "entry": null,
  "displayName": "test.tsx_Foo_component_div_onClick",
  "hash": "M48DYiidSJw",
  "canonicalFilename": "test.tsx_Foo_component_div_onClick_M48DYiidSJw",
  "path": "",
  "extension": "js",
  "parent": "Foo_component_HTDRsvUbLiE",
  "ctxKind": "eventHandler",
  "ctxName": "onClick$",
  "captures": false,
  "loc": [
    416,
    437
  ]
}
*/
== DIAGNOSTICS ==

[]
